# browsertools

./: AGENTS.md  Cargo.toml  DESIGN.md  README.md
.agents/commands/: pr.md
.github/workflows/: ci.yml  release.yml
ci/: README.md
fixtures/flows/: bookstore_first_book.json
fixtures/site/: index.html
fixtures/site/catalogue/: deterministic-replay.html  the-headless-browser.html  the-silent-compiler.html
scripts/: e2e.sh  live_view_check.py  tier1_demo.py  tier2_demo.py
src/: contract.rs  discover.rs  driver.rs  flow.rs  liveview.rs  main.rs  observe.rs  replay.rs  serve.rs
tests/: serve_primitives.rs  start_url_autoload.rs  thesis_replay.rs  tier2_decide.rs  tier2_judgment.rs  tier2_reidentify.rs
